feat: implement add vehicle fragment without car images

--- a/app/src/main/res/navigation/publish_trip_nav_graph.xml
+++ b/app/src/main/res/navigation/publish_trip_nav_graph.xml
@@ -18,5 +18,9 @@
         android:id="@+id/addVehicleFragment"
         android:name="com.example.uniride.ui.driver.vehicles.AddVehicleFragment"
         android:label="fragment_add_vehicle"
-        tools:layout="@layout/fragment_add_vehicle" />
+        tools:layout="@layout/fragment_add_vehicle" >
+        <action
+            android:id="@+id/action_addVehicleFragment_to_publishRouteFragment"
+            app:destination="@id/publishRouteFragment" />
+    </fragment>
 </navigation>
