--- a/app/src/main/res/layout/fragment_publish_route.xml
+++ b/app/src/main/res/layout/fragment_publish_route.xml
@@ -121,13 +121,14 @@
 
             <ImageButton
                 android:id="@+id/btn_add_stop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginBottom="12dp"
-                android:contentDescription="Agregar parada"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:background="@drawable/bg_circle"
+                android:padding="4dp"
                 android:src="@drawable/ic_plus"
-                android:tint="@color/main_color" />
+                android:contentDescription="Agregar parada"
+                app:tint="@color/main_color" />
+
 
             <!-- Fecha -->
             <TextView
