Update: Passenger Map Request Travel
Falta usar el util config en SearchInput

--- a/app/src/main/res/layout/fragment_search_input.xml
+++ b/app/src/main/res/layout/fragment_search_input.xml
@@ -66,6 +66,14 @@
             android:background="@android:color/transparent"
             android:textColor="@color/text_color"
             android:textSize="16sp" />
+
+        <ImageButton
+            android:id="@+id/btnVoiceOrigin"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:background="@android:color/transparent"
+            android:src="@android:drawable/ic_btn_speak_now"/>
     </LinearLayout>
 
     <!-- Campo destino -->
@@ -100,6 +108,14 @@
             android:textColor="@color/text_color"
             android:textSize="16sp"
             />
+
+        <ImageButton
+                android:id="@+id/btnVoiceDestination"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="8dp"
+                android:background="@android:color/transparent"
+                android:src="@android:drawable/ic_btn_speak_now"/>
 
     </LinearLayout>
 
