--- a/app/src/main/res/layout/fragment_passenger_profile.xml
+++ b/app/src/main/res/layout/fragment_passenger_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    android:paddingVertical="24dp"
+    android:paddingVertical="32dp"
     android:fillViewport="true">
 
     <LinearLayout
@@ -24,9 +24,10 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/bg_button_circle"
+                android:padding="8dp"
                 android:src="@drawable/ic_arrow_left"
                 android:contentDescription="Volver"
-                app:tint="@color/text_color" />
+                app:tint="@color/main_color" />
 
             <TextView
                 android:layout_width="wrap_content"
