--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    android:padding="20dp">
+    android:paddingVertical="32dp"
+    android:paddingHorizontal="24dp">
 
-    <!-- Botón de volver -->
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="40dp"
@@ -14,11 +14,10 @@
         android:background="@drawable/bg_button_circle"
         android:src="@drawable/ic_arrow_left"
         android:contentDescription="Volver"
-        android:tint="@color/text_color"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/main_color" />
 
-    <!-- Título -->
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
@@ -32,7 +31,6 @@
         app:layout_constraintBottom_toBottomOf="@id/btn_back"
         android:layout_marginStart="12dp" />
 
-    <!-- Scroll para opciones -->
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
