feat: add  "solicitudes" option to bottom nav menu driver

--- a/app/src/main/res/menu/bottom_nav_menu_driver.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_driver.xml
@@ -7,7 +7,13 @@
     <item
         android:id="@+id/driverTripsFragment"
         android:icon="@drawable/ic_manage_trips"
-        android:title="Gestionar viajes" />
+        android:title="Mis viajes" />
+
+    <item
+        android:id="@+id/tripRequestsFragment"
+        android:title="Solicitudes"
+        android:icon="@drawable/ic_requests" />
+
 
     <item
         android:id="@+id/switchToPassenger"
