--- a/app/src/main/res/layout/fragment_driver_profile.xml
+++ b/app/src/main/res/layout/fragment_driver_profile.xml
@@ -197,6 +197,17 @@
             android:layout_marginBottom="12dp" />
 
         <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_edit_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Editar Perfil"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/main_color"
+                app:cornerRadius="24dp"
+                android:layout_marginBottom="12dp" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnStatistics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -208,14 +219,14 @@
 
         <!-- Desde -->
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Conductor desde 2022"
-            android:textSize="13sp"
-            android:textColor="@color/text_color"
-            android:alpha="0.7"
-            android:layout_gravity="center"
-            android:layout_marginTop="24dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Conductor desde 2022"
+                android:textSize="13sp"
+                android:textColor="@color/text_color"
+                android:alpha="0.7"
+                android:layout_gravity="center"
+                android:layout_marginTop="24dp" />
 
     </LinearLayout>
 </ScrollView>
