Update: Edit Profile Driver and Passenger and Style Code

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,8 +6,7 @@
         android:id="@+id/activity_edit_profile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_color"
-        tools:context=".EditProfileActivity">
+        android:background="@color/background_color">
 
     <LinearLayout
             android:id="@+id/toolbar"
