--- a/app/src/main/res/layout/fragment_driver_home.xml
+++ b/app/src/main/res/layout/fragment_driver_home.xml
@@ -4,8 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_color"
     tools:context=".ui.driver.home.DriverHomeFragment">
+
+
+<!--    si no es conductor-->
+    <include
+        layout="@layout/layout_register_driver_prompt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
     <!-- Mapa -->
     <fragment
@@ -14,18 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!-- Chip de estado del conductor -->
-    <com.google.android.material.chip.Chip
-        android:id="@+id/chip_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|top"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="16dp"
-        android:text="Disponible"
-        app:chipBackgroundColor="@color/white"
-        app:chipIcon="@drawable/ic_car"
-        app:iconTint="@color/status_accepted" />
+
+
 
     <!-- Botón principal para publicar viaje -->
 
@@ -46,34 +43,7 @@
         app:cornerRadius="16dp" />
 
 
-    <LinearLayout
-        android:id="@+id/card_last_trip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_margin="16dp"
-        android:layout_marginBottom="200dp"
-        android:elevation="6dp"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:visibility="gone">
 
-        <TextView
-            android:id="@+id/tv_trip_summary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Último viaje: Chapinero → Cedritos"
-            android:textColor="@color/text_color"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_trip_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Salida: 4:00 PM"
-            android:textSize="14sp" />
-    </LinearLayout>
 
 
 </FrameLayout>
