--- a/app/src/main/res/layout/item_mensaje_otro.xml
+++ b/app/src/main/res/layout/item_mensaje_otro.xml
@@ -11,6 +11,7 @@
         android:textColor="#000000"
         android:padding="10dp"
         android:text="Mensaje"
+        android:textSize="17sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
