--- a/app/src/main/res/layout/item_trip_request_driver.xml
+++ b/app/src/main/res/layout/item_trip_request_driver.xml
@@ -1,5 +1,6 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
@@ -85,9 +86,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:gravity="end"
+            android:gravity="center"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/iv_passenger"
+            app:layout_constraintTop_toBottomOf="@id/btnMessage"
             app:layout_constraintEnd_toEndOf="parent">
 
             <Button
@@ -109,6 +110,19 @@
                 android:textAllCaps="false"
                 android:backgroundTint="@color/status_accepted" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnMessage"
+            android:layout_width="165dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:text="Contacta al pasajero"
+            android:textSize="12sp"
+            android:backgroundTint="#F0F0F0"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_passenger" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
